{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 19,
  "lineage": "670a5fb7-9b8f-69cb-99be-e0f8b5899b5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0270c2c90e9d12306",
            "arn": "arn:aws:ec2:us-east-1:471112626862:elastic-ip/eipalloc-0270c2c90e9d12306",
            "association_id": "eipassoc-0b25bbe6c06c6d80c",
            "domain": "vpc",
            "id": "eipalloc-0270c2c90e9d12306",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aba54e34a8f3c63b",
            "private_dns": "ip-10-10-1-242.ec2.internal",
            "private_ip": "10.10.1.242",
            "public_dns": "ec2-44-206-56-227.compute-1.amazonaws.com",
            "public_ip": "44.206.56.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03972092c42e8c0ca",
            "arn": "arn:aws:ec2:us-east-1:471112626862:instance/i-0808c21967384d6c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0808c21967384d6c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "21-Apr-24",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e3bdc7d6d43b192",
            "private_dns": "ip-10-10-2-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb164a89e3892e30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea75bde3f59f2747",
            "tags": {
              "Name": "Private Server"
            },
            "tags_all": {
              "Name": "Private Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b569b53310c05739"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03972092c42e8c0ca",
            "arn": "arn:aws:ec2:us-east-1:471112626862:instance/i-0c928c2de90c699ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c928c2de90c699ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "21-Apr-24",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065e31dd947b03241",
            "private_dns": "ip-10-10-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.150",
            "public_ip": "3.89.238.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c68227a902e233be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7854e3470c795a5",
            "tags": {
              "Name": "Public Server"
            },
            "tags_all": {
              "Name": "Public Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b569b53310c05739"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:internet-gateway/igw-089763fe4a3aa13b9",
            "id": "igw-089763fe4a3aa13b9",
            "owner_id": "471112626862",
            "tags": {
              "Name": "myIGW"
            },
            "tags_all": {
              "Name": "myIGW"
            },
            "vpc_id": "vpc-0ef95331062e4359a"
          },
          "dependencies": [
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0270c2c90e9d12306",
            "association_id": "eipassoc-0b25bbe6c06c6d80c",
            "connectivity_type": "public",
            "id": "nat-0514a2ce011d55675",
            "network_interface_id": "eni-0aba54e34a8f3c63b",
            "private_ip": "10.10.1.242",
            "public_ip": "44.206.56.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7854e3470c795a5",
            "tags": {
              "Name": "myNATGW"
            },
            "tags_all": {
              "Name": "myNATGW"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.my_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:route-table/rtb-0c17ef8de6a24208e",
            "id": "rtb-0c17ef8de6a24208e",
            "owner_id": "471112626862",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0514a2ce011d55675",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CRT"
            },
            "tags_all": {
              "Name": "CRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef95331062e4359a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_NATGW",
            "aws_subnet.public_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:route-table/rtb-0610e4cc516ad56ce",
            "id": "rtb-0610e4cc516ad56ce",
            "owner_id": "471112626862",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089763fe4a3aa13b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MRT"
            },
            "tags_all": {
              "Name": "MRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef95331062e4359a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd56174b56520e9c",
            "route_table_id": "rtb-0c17ef8de6a24208e",
            "subnet_id": "subnet-0ea75bde3f59f2747"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_NATGW",
            "aws_route_table.CRT",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a4a48cb7c969a1",
            "route_table_id": "rtb-0610e4cc516ad56ce",
            "subnet_id": "subnet-0f7854e3470c795a5"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.MRT",
            "aws_subnet.public_subnet",
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:subnet/subnet-0ea75bde3f59f2747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea75bde3f59f2747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0ef95331062e4359a"
          },
          "dependencies": [
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:subnet/subnet-0f7854e3470c795a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7854e3470c795a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112626862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0ef95331062e4359a"
          },
          "dependencies": [
            "aws_vpc.my-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112626862:vpc/vpc-0ef95331062e4359a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00592a47a42c94d88",
            "default_route_table_id": "rtb-0b617e84626225d61",
            "default_security_group_id": "sg-0b569b53310c05739",
            "dhcp_options_id": "dopt-0b134322c2306ca84",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef95331062e4359a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b617e84626225d61",
            "owner_id": "471112626862",
            "tags": {
              "Name": "my-VPC"
            },
            "tags_all": {
              "Name": "my-VPC"
            }
          }
        }
      ]
    }
  ]
}